--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
     <head>
         <met#aeb3b8et="utf-8">
-        <title>DarkCV - Bootstrap CV Resume Template</title>
+        <title>Linus Ngwee - Portfolio</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <meta content="Free Website Template" name="keywords">
-        <meta content="Free Website Template" name="description">
+        <meta content="Linus Ngwee, Game Developer, Unity Game Developer, Next.js, C#, C++" name="keywords">
+        <meta content="I engineer immersive, high-performance games using C++ and Unreal Engine, transforming complex mechanics into seamless player experiences. With expertise in reverse engineering, I break down code to its rawest form, optimizing every element to push the limits of what’s possible. My knowledge extends to Solidity and smart contract development, enabling secure and innovative blockchain integration within gaming environments. Whether building from the ground up or dissecting to improve, I fuse creativity and technical mastery to deliver cutting-edge, interactive experiences that captivate and perform at the highest level." name="description">
 
         <!-- Favicon -->
         <link href="img/favicon.ico" rel="icon">
