--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         </div>
                         <div class="d-flex align-items-end justify-content-between border-top">
                             <a onclick="window.print()" href="" class="btn w-50 border-end">Download CV</a>
-                            <a href="#contact" class="btn w-50 btn-scroll">Contact Me</a>
+                            <!-- <a href="#contact" class="btn w-50 btn-scroll">Contact Me</a> -->
                         </div>
                     </div>
                 </div>
