--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                             <h1 class="text-white font-weight-bold">Recent Projects</h1>
                             <div class="position-relative w-100">
                                 <div class="row g-4">
-                                    <p>Below are recent project and ongoing ones</p>
+                                    <p>Below are recent projects and ongoing ones</p>
 
                                     <div class="col-md-12">
                                         <div class="service-item">
