--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
                                     <div class="col-md-12">
                                         <div class="service-item">
-                                            <img src="declan.png" alt="" style="width: 300px;"><br><br>
+                                            <img src="declan.png" alt="" style="width: 100%;"><br><br>
                                             <h5 class="mb-2">Declan Web3-based Freelance platform Frontend</h5>
                                             <a href="https://declan-zeta.vercel.app/" target="_blank" class="btn btn-primary">View Project</a>
                                         </div>
@@ -229,7 +229,7 @@
 
                                     <div class="col-md-12">
                                         <div class="service-item">
-                                            <img src="dating.png" alt="" style="width: 300px;"><br><br>
+                                            <img src="dating.png" alt="" style="width: 100%;"><br><br>
                                             <h5 class="mb-2">Dating Platform Frontend</h5>
                                             <a href="https://dating-alpha-nine.vercel.app/" target="_blank" class="btn btn-primary">View Project</a>
                                         </div>
