--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <!-- About Start -->
                     <section class="py-5 border-bottom wow fadeInUp" data-wow-delay="0.1s">
                         <h1 class="title pb-3 mb-5">About Me</h1>
-                        <p>I specialize in Next.js, React Native, Solidity, and Web3 technologies. I build high-performance web and mobile applications, design user-friendly interfaces, and develop secure smart contracts for blockchain-based solutions. Currently, I’m working on building 100 Next.js and ReactNative UIs before end of 2025 while collaborating with backend developers and exploring innovative Web3 projects.</p>
+                        <p>I specialize in Next.js, React Native, Solidity, Rust, and Web3 technologies. I develop high-performance web and mobile applications, design user-friendly interfaces, and create secure smart contracts for blockchain-based solutions. Currently, I’m focused on building 100 Next.js and React Native frontends before the end of 2025, collaborating with backend developers, and exploring innovative Web3 projects.</p>
                         <div class="row mb-4">
                             <div class="col-sm-6 py-1">
                                 <span class="fw-medium text-primary">Name:</span> Linus Ngwee
@@ -158,13 +158,13 @@
                                 </div>
                                 <div class="skill mb-4">
                                     <div class="d-flex justify-content-between">
-                                        <p class="mb-2">dApp(Web3.js, Ethers.js, ThirdWeb)</p>
+                                        <p class="mb-2">Rust</p>
                                     </div>
                                     
                                 </div>
                                 <div class="skill mb-4">
                                     <div class="d-flex justify-content-between">
-                                        <p class="mb-2">Reverse Engineering with Ghidra</p>
+                                        <p class="mb-2">dApp(Web3.js, Ethers.js, ThirdWeb)</p>
                                     </div>
                                     
                                 </div>
