--- a/index.html
+++ b/index.html
@@ -218,6 +218,14 @@
                             <div class="position-relative w-100">
                                 <div class="row g-4">
                                     <p>Below are recent projects and ongoing ones</p>
+                                    
+                                    <div class="col-md-12">
+                                        <div class="service-item">
+                                            <img src="declan-contract.png" alt="" style="width: 100%;"><br><br>
+                                            <h5 class="mb-2">Declan Web3-based Freelance platform Smart Contract</h5>
+                                            <a href="https://sepolia-blockscout.lisk.com/address/0xed27133b24a9cdf08e2a9f05d4ba2b5f323e2de1?tab=contract_source_code" target="_blank" class="btn btn-primary">View Project</a>
+                                        </div>
+                                    </div>
 
                                     <div class="col-md-12">
                                         <div class="service-item">
