--- a/index.html
+++ b/index.html
@@ -218,6 +218,23 @@
                             <div class="position-relative w-100">
                                 <div class="row g-4">
                                     <p>Below are recent projects and ongoing ones</p>
+
+                                    <div class="col-md-12">
+                                        <div class="service-item">
+                                            <img src="reactNativeEcomMobile.png" alt="" style="width: 100%;"><br><br>
+                                            <h5 class="mb-2">ReactNative Ecommerce Android Build</h5>
+                                            <a href="https://expo.dev/accounts/eldiablo_22/projects/slyrak-market/builds/bc04f7a3-4285-48f1-af6a-a185bd8c1fa5" target="_blank" class="btn btn-primary">Download APK</a>
+                                            <a href="https://expo.dev/artifacts/eas/f8mrmsuewo6Scv7vWv2Cmr.aab" target="_blank" class="btn btn-primary">Download AAB Bundle</a>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-md-12">
+                                        <div class="service-item">
+                                            <img src="reactNativeEcomWeb.png" alt="" style="width: 100%;"><br><br>
+                                            <h5 class="mb-2">ReactNative Ecommerce Web Build</h5>
+                                            <a href="https://slyrak-market--9jn01wi7a8.expo.app/" target="_blank" class="btn btn-primary">View Project</a>
+                                        </div>
+                                    </div>
                                     
                                     <div class="col-md-12">
                                         <div class="service-item">
