--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta content="I specialize in Next.js, React Native, Solidity, and Web3 technologies. I build high-performance web and mobile applications, design user-friendly interfaces, and develop secure smart contracts for blockchain-based solutions. Currently, I’m working on building 100 Next.js and ReactNative UIs before end of 2025 while collaborating with backend developers and exploring innovative Web3 projects." name="description">
 
         <!-- Favicon -->
-        <link href="img/favicon.ico" rel="icon">
+        <link href="reactNativeEcomWeb.png" rel="icon" type="image/png">
 
         <!-- Google Web Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
