--- a/index.html
+++ b/index.html
@@ -4,8 +4,24 @@
         <met#aeb3b8et="utf-8">
         <title>Linus Ngwee - Portfolio</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <meta content="Linus Ngwee, Next.js, ReactNative, C#, C++" name="keywords">
-        <meta content="I specialize in Next.js, React Native, Solidity, and Web3 technologies. I build high-performance web and mobile applications, design user-friendly interfaces, and develop secure smart contracts for blockchain-based solutions. Currently, I’m working on building 100 Next.js and ReactNative UIs before end of 2025 while collaborating with backend developers and exploring innovative Web3 projects." name="description">
+        <meta content="Linus Ngwee, Full-stack Developer , React.js , Next.js , Solidity , Python , AI , FastAPI , SQL Alchemy , ReactNative , NestJS , Socket.io , AWS" name="keywords">
+        <meta content="I’m a passionate and versatile full-stack developer with 10+ years of experience building scalable, high-performance web and mobile applications. My expertise spans across modern JavaScript frameworks like React.js, Next.js, and React Native, along with robust backend development using Python (FastAPI) and Node.js (NestJS).
+
+        In the Web3 space, I develop smart contracts using Solidity, and I’m deeply interested in building secure, decentralized applications that drive innovation. I thrive in fast-paced environments, collaborating across teams to deliver solutions that are clean, maintainable, and user-focused.
+
+        Currently exploring AI integration and edge technologies to create impactful, intelligent systems.
+
+        ✅ Let’s connect if you’re looking for:
+
+        A Full-stack developer
+
+        Web3 smart contract engineer
+
+        React/Next.js frontend expert
+
+        Scalable backend system builder (FastAPI/NestJS)
+
+        Collaborative problem solver ready to deliver" name="description">
 
         <!-- Favicon -->
         <link href="reactNativeEcomWeb.png" rel="icon" type="image/png">
@@ -48,11 +64,11 @@
                         <h1 class="text-primary mt-2">Linus Ngwee</h1>
                         <div class="mb-4" style="height: 22px;">
                             <h4 class="typed-text-output d-inline-block text-light"></h4>
-                            <div class="typed-text d-none"> Web Developer, Mobile Developer, Web3 Developer</div>
+                            <div class="typed-text d-none"> Full-stack Developer , React.js , Next.js , Solidity , Python , AI , FastAPI , SQL Alchemy , ReactNative , NestJS , Socket.io , AWS</div>
                         </div>
                         <div class="d-flex justify-content-center mt-auto mb-3">
-                            <a class="btn btn-secondary btn-square mx-1" href="https://x.com/LinusLinco69360"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-secondary btn-square mx-1" href="https://github.com/Slyrak-Corporation"><i class="fab fa-github"></i></a>
+                            <a class="btn btn-secondary btn-square mx-1" href="https://x.com/celestialelf_"><i class="fab fa-twitter"></i></a>
+                            <a class="btn btn-secondary btn-square mx-1" href="https://github.com/lonewolf2580"><i class="fab fa-github"></i></a>
                             <a class="btn btn-secondary btn-square mx-1" href="https://www.linkedin.com/in/linus-ngwee-aa7366177/"><i class="fab fa-linkedin-in"></i></a>
                             <a class="btn btn-secondary btn-square mx-1" href="https://www.instagram.com/linusandolini"><i class="fab fa-instagram"></i></a>
                         </div>
@@ -66,7 +82,25 @@
                     <!-- About Start -->
                     <section class="py-5 border-bottom wow fadeInUp" data-wow-delay="0.1s">
                         <h1 class="title pb-3 mb-5">About Me</h1>
-                        <p>I specialize in Next.js, React Native, Solidity, Rust, and Web3 technologies. I develop high-performance web and mobile applications, design user-friendly interfaces, and create secure smart contracts for blockchain-based solutions. Currently, I’m focused on building 100 Next.js and React Native frontends before the end of 2025, collaborating with backend developers, and exploring innovative Web3 projects.</p>
+                        <p>
+                            I’m a passionate and versatile full-stack developer with 10+ years of experience building scalable, high-performance web and mobile applications. My expertise spans across modern JavaScript frameworks like <strong>React.js</strong>, <strong>Next.js</strong>, and <strong>React Native</strong>, along with robust backend development using <strong>Python (FastAPI)</strong> and <strong>Node.js (NestJS)</strong>.
+                        </p>
+                        <p></p>
+                            In the Web3 space, I develop smart contracts using <strong>Solidity</strong>, and I’m deeply interested in building secure, decentralized applications that drive innovation. I thrive in fast-paced environments, collaborating across teams to deliver solutions that are clean, maintainable, and user-focused.
+                        </p>
+                        <p>
+                            Currently exploring AI integration and edge technologies to create impactful, intelligent systems.
+                        </p>
+                        <p>
+                            <strong>✅ Let’s connect if you’re looking for:</strong>
+                        </p>
+                        <ul>
+                            <li>Full-stack developer</li>
+                            <li>Web3 smart contract engineer</li>
+                            <li>React/Next.js frontend expert</li>
+                            <li>Scalable backend system builder (FastAPI/NestJS)</li>
+                            <li>Collaborative problem solver ready to deliver</li>
+                        </ul>
                         <div class="row mb-4">
                             <div class="col-sm-6 py-1">
                                 <span class="fw-medium text-primary">Name:</span> Linus Ngwee
