--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             <a class="btn btn-secondary btn-square mx-1" href="https://x.com/celestialelf_"><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-secondary btn-square mx-1" href="https://github.com/lonewolf2580"><i class="fab fa-github"></i></a>
                             <a class="btn btn-secondary btn-square mx-1" href="https://www.linkedin.com/in/linus-ngwee-aa7366177/"><i class="fab fa-linkedin-in"></i></a>
-                            <a class="btn btn-secondary btn-square mx-1" href="https://www.instagram.com/linusandolini"><i class="fab fa-instagram"></i></a>
+                            <!-- <a class="btn btn-secondary btn-square mx-1" href="https://www.instagram.com/linusandolini"><i class="fab fa-instagram"></i></a> -->
                         </div>
                         <div class="d-flex align-items-end justify-content-between border-top">
                             <a onclick="window.print()" href="" class="btn w-50 border-end">Download CV</a>
@@ -148,7 +148,7 @@
                             </div>
                             <div class="col-md-4 col-lg-6 col-xl-4">
                                 <div class="d-flex bg-secondary p-4">
-                                    <h1 class="flex-shrink-0 display-5 text-primary mb-0" data-toggle="counter-up">200</h1>
+                                    <h1 class="flex-shrink-0 display-5 text-primary mb-0" data-toggle="counter-up">120</h1>
                                     <div class="ps-3">
                                         <p class="mb-0">Complete</p>
                                         <h5 class="mb-0">Projects</h5>
@@ -164,6 +164,57 @@
                         <h1 class="title pb-3 mb-5">Skills</h1>
                         <div class="row">
                             <div class="col-sm-6">
+                                <div class="skill mb-4">
+                                    <div class="d-flex justify-content-between">
+                                        <p class="mb-2">React.js</p>
+                                    </div>
+                                </div>
+                                <div class="skill mb-4">
+                                    <div class="d-flex justify-content-between">
+                                        <p class="mb-2">JavaScript</p>
+                                    </div>
+                                </div>
+                                <div class="skill mb-4">
+                                    <div class="d-flex justify-content-between">
+                                        <p class="mb-2">Python</p>
+                                    </div>
+                                </div>
+                                <div class="skill mb-4">
+                                    <div class="d-flex justify-content-between">
+                                        <p class="mb-2">FastAPI</p>
+                                    </div>
+                                </div>
+                                <div class="skill mb-4">
+                                    <div class="d-flex justify-content-between">
+                                        <p class="mb-2">Node.js</p>
+                                    </div>
+                                </div>
+                                <div class="skill mb-4">
+                                    <div class="d-flex justify-content-between">
+                                        <p class="mb-2">NestJS</p>
+                                    </div>
+                                </div>
+                                <div class="skill mb-4">
+                                    <div class="d-flex justify-content-between">
+                                        <p class="mb-2">SQLAlchemy</p>
+                                    </div>
+                                </div>
+                                <div class="skill mb-4">
+                                    <div class="d-flex justify-content-between">
+                                        <p class="mb-2">Socket.io</p>
+                                    </div>
+                                </div>
+                                <div class="skill mb-4">
+                                    <div class="d-flex justify-content-between">
+                                        <p class="mb-2">AWS</p>
+                                    </div>
+                                </div>
+                                <div class="skill mb-4">
+                                    <div class="d-flex justify-content-between">
+                                        <p class="mb-2">AI Integration</p>
+                                    </div>
+                                </div>
+                            </div>
                                 <div class="skill mb-4">
                                     <div class="d-flex justify-content-between">
                                         <p class="mb-2">Next.js</p>
@@ -192,13 +243,7 @@
                                 </div>
                                 <div class="skill mb-4">
                                     <div class="d-flex justify-content-between">
-                                        <p class="mb-2">Rust</p>
-                                    </div>
-                                    
-                                </div>
-                                <div class="skill mb-4">
-                                    <div class="d-flex justify-content-between">
-                                        <p class="mb-2">dApp(Web3.js, Ethers.js, ThirdWeb)</p>
+                                        <p class="mb-2">dApp(viem, RainbowKit, ThirdWeb)</p>
                                     </div>
                                     
                                 </div>
@@ -234,6 +279,11 @@
                                 <h5 class="mb-1">Software Programming Instructor(Part-time)</h5>
                                 <p class="mb-2">Godfrey Okoye University | <small>2021</small></p>
                                 <!-- <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet lorem diam</p> -->
+                            </div>
+                            <div class="position-relative mb-4">
+                                <span class="bi bi-arrow-right fs-4 text-light position-absolute" style="top: -5px; left: -50px;"></span>
+                                <h5 class="mb-1">Fullstack Engineer</h5>
+                                <p class="mb-2">Upwork | <small>2021 - 2024</small></p>
                             </div>
                             <div class="position-relative mb-4">
                                 <span class="bi bi-arrow-right fs-4 text-light position-absolute" style="top: -5px; left: -50px;"></span>
